# Potassium-Audio-plugin

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: main.yml
Source/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  createPluginFilter.cpp
Source/dsp/: CompressorStage.h  EQStage.h  InputGainStage.h  LimiterStage.h  SaturatorStage.h  StereoWidthStage.h
Source/ui/: PotassiumUI.html
devlog/: 2026-07-12.md  2026-07-13.md
docs/: development-plan.md  requirements.md  technical-spec.md
release/: README.md  README.txt
release/Potassium_v1.0.4_Win64/: README.md
release/v1.0.0/: README.txt
release/v1.0.1/: CMakeLists.txt  PluginProcessor.h  README.txt
release/v1.0.1/Source/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
release/v1.0.1/Source/dsp/: DensityStage.h  OutputGainStage.h  OversamplingStage.h
